[package]
name = "concurrency-workshop"
version = "0.1.0"
authors = ["Ruben Paz <me@ruben.io>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.6.1"
rand = "0.6.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "01_hello_world"
harness = false

[[bench]]
name = "02_scanner"
harness = false